--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -13,15 +13,21 @@
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "@types/uuid": "^8.3.4",
+    "aws-cdk": "2.10.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "2.10.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-appsync": "^1.150.0",
+    "@aws-cdk/aws-cognito": "^1.150.0",
+    "@aws-cdk/aws-dynamodb": "^1.150.0",
+    "@aws-cdk/aws-lambda": "^1.150.0",
     "aws-cdk-lib": "2.10.0",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.16"
+    "source-map-support": "^0.5.16",
+    "uuid": "^8.3.2"
   }
 }
