--- a/bonappetit/package.json
+++ b/bonappetit/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "1.2.5",
+    "@aws-cdk/aws-lambda-event-sources": "^1.150.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
