--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -25,6 +25,7 @@
     "@aws-cdk/aws-cognito": "^1.150.0",
     "@aws-cdk/aws-dynamodb": "^1.150.0",
     "@aws-cdk/aws-lambda": "^1.150.0",
+    "@aws-cdk/aws-lambda-event-sources": "1.150.0",
     "aws-cdk-lib": "2.10.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.16",
