--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -11,24 +11,27 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
+    "@types/jest": "^27.4.1",
+    "@types/node": "17.0.23",
     "@types/uuid": "^8.3.4",
-    "aws-cdk": "2.10.0",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
-    "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
+    "typescript": "~4.6.3"
   },
   "dependencies": {
-    "@aws-cdk/aws-appsync": "^1.150.0",
-    "@aws-cdk/aws-cognito": "^1.150.0",
-    "@aws-cdk/aws-dynamodb": "^1.150.0",
-    "@aws-cdk/aws-lambda": "^1.150.0",
-    "@aws-cdk/aws-lambda-event-sources": "1.150.0",
-    "aws-cdk-lib": "2.10.0",
-    "constructs": "^10.0.0",
-    "source-map-support": "^0.5.16",
+    "@aws-cdk/aws-appsync": "1.151.0",
+    "@aws-cdk/aws-codebuild": "1.151.0",
+    "@aws-cdk/aws-codepipeline": "1.151.0",
+    "@aws-cdk/aws-codepipeline-actions": "1.151.0",
+    "@aws-cdk/aws-cognito": "1.151.0",
+    "@aws-cdk/aws-dynamodb": "1.151.0",
+    "@aws-cdk/aws-ecs": "1.151.0",
+    "@aws-cdk/aws-ecs-patterns": "1.151.0",
+    "@aws-cdk/aws-lambda": "1.151.0",
+    "@aws-cdk/aws-lambda-event-sources": "1.151.0",
+    "@aws-cdk/core": "1.151.0",
+    "source-map-support": "^0.5.21",
     "uuid": "^8.3.2"
   }
 }
