cleaned stuff up

--- a/infrastructure/lambda-ts/package.json
+++ b/infrastructure/lambda-ts/package.json
@@ -11,9 +11,9 @@
   "license": "ISC",
   "types": "./RecipeURL.d.ts",
   "dependencies": {
-    "uuid": "^8.3.2"
+    "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.4"
+    "@types/uuid": "8.3.4"
   }
 }
