--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -11,12 +11,12 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
+    "@types/jest": "27.4.1",
     "@types/node": "17.0.23",
-    "@types/uuid": "^8.3.4",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.4",
-    "ts-node": "^10.7.0",
+    "@types/uuid": "8.3.4",
+    "jest": "27.5.1",
+    "ts-jest": "27.1.4",
+    "ts-node": "10.7.0",
     "typescript": "~4.6.3"
   },
   "dependencies": {
@@ -31,7 +31,7 @@
     "@aws-cdk/aws-lambda": "1.151.0",
     "@aws-cdk/aws-lambda-event-sources": "1.151.0",
     "@aws-cdk/core": "1.151.0",
-    "source-map-support": "^0.5.21",
-    "uuid": "^8.3.2"
+    "source-map-support": "0.5.21",
+    "uuid": "8.3.2"
   }
 }
